<resources>
    <string name="app_name">SameTeam</string>
    <string name="title_activity_kotlin">KotlinActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="ACTIVITIES">ACTIVITIES</string>
    <string name="desc_1">Collaborate seamlessly with activity sign-ups for individuals or Teams.</string>
    <string name="COMMUNICATIONS">COMMUNICATIONS</string>
    <string name="desc_2">Communicate efficiently through chat, calls, or video.</string>
    <string name="TEAMS">TEAMS</string>
    <string name="desc_3">Boost productivity with Teams for activities and communications.</string>
    <string name="welcome">Welcome</string>
    <string name="email2">Name@company.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="already_purchased">Company Already Purchased?</string>
    <string name="complete_profile_setup">Complete Your Account Setup</string>
    <string name="enter_email">Please enter email address.</string>
    <string name="enter_valid_email">Please enter valid email address.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="invalid_password">Password must be alphanumeric with at least 8 characters</string>
    <string name="invalid_password_error">Password must be minimum of 8 characters, one capital letter, one number, and one special character.</string>
    <string name="waiting_for_approval">Waiting for Approval</string>
    <string name="waiting_for_approval_content">We have sent an email to your company admin to verify your account. You will have access once your account is confirmed.</string>
    <string name="create_profile">Create Profile</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company_email_id">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="role">Role</string>
    <string name="employee_code">Employee Code</string>
    <string name="company_code">Company Code</string>
    <string name="create_password">Create Password</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="title_optional">Title (Optional)</string>
    <string name="enter_FN">Please enter first name.</string>
    <string name="enter_LN">Please enter last name.</string>
    <string name="enter_title">Please enter title.</string>
    <string name="enter_company">Please enter company code.</string>
    <string name="enter_number">Please enter mobile number.</string>
    <string name="enter_valid_number">Please enter valid mobile number.</string>
    <string name="forgot_pass">Enter the email associated with your account and we’ll send an email with instructions to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email address</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="instruction">We have sent you password recovery instructions.</string>
    <string name="create_new_password">Create new password</string>
    <string name="old_password">Old password</string>
    <string name="enter_old">Please enter old password</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="no_password_match">New password and confirm password don`t match</string>
    <string name="same_password_old">New password must be different from old password</string>
    <string name="reset_pass">Your new password must be different from previous used password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Confirm new password</string>
    <string name="calendar">My Calendar</string>
    <string name="event">Event</string>
    <string name="team_calendar">Team Calendar</string>
    <string name="chat">Chat</string>
    <string name="notification">Notifications</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_events">My Events</string>
    <string name="my_tasks">My Tasks</string>
    <string name="events">Events</string>
    <string name="other">Other</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="need_help">Need Help?</string>
    <string name="messages">Communications</string>
    <string name="available">Available</string>
    <string name="general">General</string>
    <string name="english_us">English - US</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="logged_out">Logged out successfully</string>
    <string name="user_deleted_successfully">User deleted successfully</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_week">This week</string>
    <string name="starts2">Starts :</string>
    <string name="date">Date :</string>
    <string name="ends2">Ends :</string>
    <string name="time_zone">Time Zone</string>
    <string name="done">Done</string>
    <string name="language">Language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_directory">Team Contacts</string>
    <string name="task_title">Task title</string>
    <string name="enter_activity_name">Activity Name</string>
    <string name="choose_event">Choose Event</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="all_day">All Day</string>
    <string name="start_team">Start a Team with Participants Above</string>
    <string name="participants_teams">Participants and Teams</string>
    <string name="participants">Participants</string>
    <string name="private_activity">Private Activity</string>
    <string name="private_activity_description">All team contacts will see the activity unless marked private.</string>
    <string name="remind_me">Remind me</string>
    <string name="set_reminders">Set Reminders</string>
    <string name="location">Task Location</string>
    <string name="choose_month">Choose Month</string>
    <string name="choose_location">Facility, Room, etc.</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_activity_name_error">Please enter activity name</string>
    <string name="enter_description">Please enter description</string>
    <string name="select_event">Please select event for task</string>
    <string name="select_date">Please select start date for task</string>
    <string name="enter_start">Please enter start time</string>
    <string name="enter_end">Please enter end time</string>
    <string name="select_participants">Please select participant(s) for task</string>
    <string name="enter_valid_time">End time should be greater than start time. If the task goes into the next day, please create another task.</string>
    <string name="enter_location">Please enter task location</string>
    <string name="activity">Activity</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="create_activity">Create Activity</string>
    <string name="event_name">Event Name</string>
    <string name="invite_people">Invite People</string>
    <string name="search_by_name_or_email_address">Search by name or email address</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_email">Search by email address</string>
    <string name="search">Search</string>
    <string name="teams">Teams</string>
    <string name="activities">Activities</string>
    <string name="individual">Individual</string>
    <string name="remind_before">Remind before</string>
    <string name="reminders">Reminders</string>
    <string name="five_mins">5 minutes</string>
    <string name="ten_mins">10 minutes</string>
    <string name="fifteen_mins">15 minutes</string>
    <string name="thirty_mins">30 minutes</string>
    <string name="fortyfive_mins">45 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="one_day">1 day</string>
    <string name="dont_remind">Don\'t remind</string>
    <string name="going">Going?</string>
    <string name="JAN">Jan</string>
    <string name="FEB">Feb</string>
    <string name="MAR">Mar</string>
    <string name="APR">Apr</string>
    <string name="MAY">May</string>
    <string name="JUN">Jun</string>
    <string name="JUL">Jul</string>
    <string name="AUG">Aug</string>
    <string name="SEP">Sep</string>
    <string name="OCT">Oct</string>
    <string name="NOV">Nov</string>
    <string name="DEC">Dec</string>
    <string name="people_invited">People Invited</string>
    <string name="created_by">Created By:</string>
    <string name="accept">Accept</string>
    <string name="maybe">Maybe</string>
    <string name="decline">Decline</string>
    <string name="complete">COMPLETE</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="custom">Custom</string>
    <string name="repeat">Repeat</string>
    <string name="never">Never</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="add">ADD</string>
    <string name="admin">Admin</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="no_internet">No internet connection</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_file">Choose File</string>
    <string name="select_country">Select a country</string>
    <string name="result_not_found">Result not found</string>
    <string name="search2">Search…</string>
    <string name="something_went_wrong">Something went wrong. Please try again later!"</string>
    <string name="no_activities_available">Tap the Plus to Create an Activity or Event</string>
    <string name="no_activities_available_me">No Activities Available</string>
    <string name="no_notifications_available">No notifications available</string>
    <string name="no_chats_available">No chats available</string>
    <string name="no_users_available">No users found</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="banner_unit_id">ca-app-pub-5910824879176970/9964705414</string>
</resources>