<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item android:id="@+id/calendarFragment"-->
<!--        android:title="@string/calendar"-->
<!--        android:icon="@drawable/calendar_selector"/>-->

    <item android:id="@+id/taskFragment"
        android:title="@string/event"
        android:icon="@drawable/calendar_selector"/>

    <item android:id="@+id/chatFragment"
        android:title="@string/chat"
        android:icon="@drawable/chat_selector"/>

    <item android:id="@+id/notificationFragment"
        android:title="@string/notification"
        android:icon="@drawable/notification_selector"/>

    <item android:id="@+id/userDirectoryFragment"
        android:title="@string/user_directory"
        android:icon="@drawable/profile_selector"/>
</menu>