<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/legendText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/s"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/m"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/t"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/w"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/t"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/f"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/legendText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/s"
        android:textColor="@color/grey"
        android:textSize="14sp" />

</LinearLayout>