<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.sameteam.authScreens.viewModel.LoginVM" />
    </data>

    <LinearLayout
        style="@style/RootLayout"
        android:orientation="vertical"
        tools:context=".authScreens.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/scale_25dp"
                android:paddingEnd="@dimen/scale_25dp"
                android:paddingBottom="@dimen/scale_40dp"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="205dp"
                    android:layout_height="@dimen/scale_35dp"
                    android:layout_marginTop="86dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenirnext_regular"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/scale_20dp"
                    android:text="@string/welcome"
                    android:textColor="@color/darkGrey"
                    android:textSize="26sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/scale_80dp"
                    app:placeholderText="@string/email_address"
                    android:hint="@string/email"
                    android:theme="@style/MyEditTextHint"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:id="@+id/txtEmail"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.loginReqModel.email}"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/scale_30dp"
                    android:hint="@string/password"
                    android:theme="@style/MyEditTextHint"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtPassword"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:text="@={viewModel.loginReqModel.password}"/>

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotPass"
                    android:text="@string/forgot_password"
                    android:layout_marginTop="@dimen/scale_10dp"
                    android:textSize="@dimen/text_size_14sp"
                    android:paddingVertical="@dimen/scale_6dp"
                    android:paddingHorizontal="@dimen/scale_7dp"
                    android:fontFamily="@font/avenirnext_demibold"
                    android:layout_gravity="end"/>


                <com.google.android.material.button.MaterialButton
                    style="@style/MyProgressButton"
                    android:text="@string/login"
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="@dimen/scale_30dp"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/progressBar"
                    android:visibility="gone"
                    android:progressTint="@color/colorPrimary"
                    android:indeterminateTint="@color/colorPrimary"
                    android:secondaryProgressTint="@color/colorPrimary"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal|bottom">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_account"
                            android:textSize="@dimen/text_size_14sp"
                            android:fontFamily="@font/avenirnext_medium"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtSignup"
                            android:text="@string/sign_up"
                            android:textSize="@dimen/text_size_14sp"
                            android:padding="@dimen/scale_3dp"
                            android:layout_marginStart="@dimen/scale_5dp"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/avenirnext_demibold"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>

