<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.sameteam.homeScreen.bottomNavigation.userDirectoryModule.viewModel.ResetPassVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/RootLayout"
        android:orientation="vertical"
        tools:context=".homeScreen.bottomNavigation.userDirectoryModule.activity.ResetPasswordActivity">


        <include
            android:id="@+id/custom_toolbar"
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/custom_toolbar"
            app:layout_constraintBottom_toTopOf="@id/adView"
            android:paddingStart="@dimen/scale_20dp"
            android:paddingEnd="@dimen/scale_20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_17dp"
                android:fontFamily="@font/avenirnext_medium"
                android:gravity="start"
                android:text="@string/reset_pass"
                android:textSize="@dimen/text_size_14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:hint="@string/old_password"
                android:theme="@style/MyEditTextHint"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtOldpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text="@={viewModel.changePasswordRequestModel.old_password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_30dp"
                android:hint="@string/create_new_password"
                android:theme="@style/MyEditTextHint"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:text="@={viewModel.changePasswordRequestModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scale_30dp"
                android:hint="@string/confirm_password_hint"
                android:theme="@style/MyEditTextHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewModel.changePasswordRequestModel.confirmPassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSend"
                style="@style/MyProgressButton"
                android:layout_marginTop="@dimen/scale_40dp"
                android:text="@string/reset_password" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_unit_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

